--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Simple icons</title>
+    <title>Road Gems</title>
     <style>
       html, body {
         height: 100%;
@@ -14,34 +14,15 @@
         height: 100%;
       }
     </style>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRFeqjSAyPVslzYtzd19vpaJAFbIwihl0&callback=initMap">
+    </script>
+     <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
   </head>
   <body>
     <div id="map"></div>
-    <script>
-
-      // This example adds a marker to indicate the position of Bondi Beach in Sydney,
-      // Australia.
-      function initMap() {
-        var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 4,
-          center: {lat: -33, lng: 151}
-        });
-
-        var image = 'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png';
-        new google.maps.Marker({
-          position: {lat: -33.890, lng: 151.274},
-          map: map,
-          icon: image
-        });
-        new google.maps.Marker({
-          position: {lat: -31.890, lng: 161.274},
-          map: map,
-          icon: image
-        });
-      }
-    </script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRFeqjSAyPVslzYtzd19vpaJAFbIwihl0&callback=initMap">
+   
+    <script src="map_markers.js"
     </script>
   </body>
 </html>
