--- a/html/index.html
+++ b/html/index.html
@@ -14,15 +14,15 @@
         height: 100%;
       }
     </style>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRFeqjSAyPVslzYtzd19vpaJAFbIwihl0&callback=initMap">
-    </script>
      <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
   </head>
   <body>
     <div id="map"></div>
-   
-    <script src="map_markers.js"
+    <script src="map_markers.js">
+       </script>
+    <script async defer
+       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRFeqjSAyPVslzYtzd19vpaJAFbIwihl0&sensor=true&callback=initMap">
     </script>
+
   </body>
 </html>
