--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
     <script src="map_markers.js">
        </script>
     <script async defer
-       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRFeqjSAyPVslzYtzd19vpaJAFbIwihl0&sensor=true&callback=initMap">
+       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRFeqjSAyPVslzYtzd19vpaJAFbIwihl0&callback=initMap">
     </script>
 
   </body>
